fix remaing ticket
